--- a/react-components/package.json
+++ b/react-components/package.json
@@ -1,7 +1,6 @@
 {
   "name": "react-components",
   "version": "0.1.0",
-  "homepage": "https://rolling-scopes-school.github.io/sleepymaryalex-REACT2022Q3/react-components/",
   "private": true,
   "dependencies": {
     "@testing-library/jest-dom": "^5.16.5",
@@ -14,6 +13,7 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router": "6.3.0",
+    "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.1",
     "typescript": "^4.8.3",
     "web-vitals": "^2.1.4",
