--- a/react-components/package.json
+++ b/react-components/package.json
@@ -1,6 +1,7 @@
 {
   "name": "react-components",
   "version": "0.1.0",
+  "homepage": "https://rolling-scopes-school.github.io/sleepymaryalex-REACT2022Q3/react-component/",
   "private": true,
   "dependencies": {
     "@testing-library/jest-dom": "^5.16.5",
