feat: configure eslint and stylelint

--- a/react-components/.eslintrc
+++ b/react-components/.eslintrc
@@ -5,7 +5,8 @@
     "plugin:@typescript-eslint/recommended",
     "prettier",
     "plugin:react-hooks/recommended",
-    "plugin:prettier/recommended"
+    "plugin:prettier/recommended",
+    "plugin:css/recommended"
   ],
   "env": {
     "browser": true,
@@ -22,7 +23,7 @@
 		"sourceType": "module"
   },
   "plugins": [
-    "@typescript-eslint", "react", "prettier", "react-hooks"
+    "@typescript-eslint", "react", "prettier", "react-hooks", "css"
   ],
   "rules": {
     "react-hooks/rules-of-hooks": "error",
@@ -42,10 +43,10 @@
     "react/jsx-uses-react": "off",
     "react/react-in-jsx-scope": "off"
   },
-	"settings": {
-		"react": {
-			"pragma": "React",
-			"version": "detect"
-		}
-	}
+  "settings": {
+    "react": {
+      "pragma": "React",
+      "version": "detect"
+    }
+  }
 }
