--- a/react-components/package.json
+++ b/react-components/package.json
@@ -13,7 +13,6 @@
     "@types/react-dom": "^18.0.6",
     "@typescript-eslint/eslint-plugin": "^5.22.0",
     "@typescript-eslint/parser": "^5.22.0",
-    "eslint": "^8.14.0",
     "eslint-config-prettier": "^8.5.0",
     "eslint-import-resolver-typescript": "^2.7.1",
     "eslint-plugin-import": "^2.26.0",
@@ -36,7 +35,9 @@
     "test": "react-scripts test",
     "eject": "react-scripts eject",
     "lint": "eslint -c .eslintrc --ext .ts,.tsx .",
-    "lint:fix": "npm run lint -- --fix"
+    "lint:fix": "npm run lint -- --fix",
+    "stylelint": "stylelint **/*.css",
+    "stylelint:fix": "stylelint **/*.css --fix"
   },
   "eslintConfig": {
     "extends": [
@@ -60,6 +61,10 @@
     ]
   },
   "devDependencies": {
-    "jest-localstorage-mock": "^2.4.22"
+    "eslint": "^8.24.0",
+    "eslint-plugin-css": "^0.6.0",
+    "jest-localstorage-mock": "^2.4.22",
+    "stylelint": "^14.13.0",
+    "stylelint-config-standard": "^28.0.0"
   }
 }
