--- a/react-forms/package.json
+++ b/react-forms/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "react-components",
+  "name": "react-forms",
   "version": "0.1.0",
-  "homepage": "https://rolling-scopes-school.github.io/sleepymaryalex-REACT2022Q3/react-components/",
+  "homepage": "https://rolling-scopes-school.github.io/sleepymaryalex-REACT2022Q3/react-forms/",
   "private": true,
   "dependencies": {
     "@testing-library/jest-dom": "^5.16.5",
