--- a/react-api/package.json
+++ b/react-api/package.json
@@ -64,6 +64,7 @@
     "eslint": "^8.24.0",
     "eslint-plugin-css": "^0.6.0",
     "jest-localstorage-mock": "^2.4.22",
+    "msw": "^0.47.4",
     "stylelint": "^14.13.0",
     "stylelint-config-standard": "^28.0.0"
   }
