--- a/react-hooks/package.json
+++ b/react-hooks/package.json
@@ -23,6 +23,7 @@
     "prettier": "^2.6.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-hook-form": "^7.38.0",
     "react-router": "6.3.0",
     "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.1",
