--- a/react-custom-app-state/package.json
+++ b/react-custom-app-state/package.json
@@ -4,6 +4,9 @@
   "homepage": "https://rolling-scopes-school.github.io/sleepymaryalex-REACT2022Q3/react-hooks/",
   "private": true,
   "dependencies": {
+    "@emotion/react": "^11.10.5",
+    "@emotion/styled": "^11.10.5",
+    "@mui/material": "^5.10.11",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
