--- a/react-components/package.json
+++ b/react-components/package.json
@@ -60,6 +60,10 @@
     ]
   },
   "devDependencies": {
-    "jest-localstorage-mock": "^2.4.22"
+    "eslint": "^8.24.0",
+    "eslint-plugin-css": "^0.6.0",
+    "jest-localstorage-mock": "^2.4.22",
+    "stylelint": "^14.14.0",
+    "stylelint-config-standard": "^28.0.0"
   }
 }
