--- a/react-components/package.json
+++ b/react-components/package.json
@@ -24,6 +24,7 @@
     "eslint-plugin-react": "^7.29.4",
     "husky": "^7.0.4",
     "lint-staged": "^12.4.1",
+    "localforage": "^1.10.0",
     "prettier": "^2.6.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
