--- a/react-components/package.json
+++ b/react-components/package.json
@@ -73,7 +73,9 @@
     "eslint-plugin-css": "^0.6.0",
     "jest-localstorage-mock": "^2.4.22",
     "msw": "^0.47.4",
-    "stylelint": "^14.13.0",
-    "stylelint-config-standard": "^28.0.0"
+    "sass": "^1.56.0",
+    "stylelint": "^14.14.1",
+    "stylelint-config-standard": "^28.0.0",
+    "stylelint-config-standard-scss": "^6.0.0"
   }
 }
