feat: add eslint-plugin-testing-library

--- a/react-components/.eslintrc
+++ b/react-components/.eslintrc
@@ -23,7 +23,7 @@
 		"sourceType": "module"
   },
   "plugins": [
-    "@typescript-eslint", "react", "prettier", "react-hooks", "css"
+    "@typescript-eslint", "react", "prettier", "react-hooks", "css", "testing-library"
   ],
   "rules": {
     "react-hooks/rules-of-hooks": "error",
@@ -41,7 +41,21 @@
     "@typescript-eslint/no-explicit-any": "error",
     "@typescript-eslint/no-var-reqiures": "off",
     "react/jsx-uses-react": "off",
-    "react/react-in-jsx-scope": "off"
+    "react/react-in-jsx-scope": "off",
+    "testing-library/await-async-query": "error",
+    "testing-library/no-await-sync-query": "error",
+    "testing-library/render-result-naming-convention": "error",
+    "testing-library/no-promise-in-fire-event": "error",
+    "testing-library/prefer-wait-for": "error",
+    "testing-library/no-node-access": ["error", {"allowContainerFirstChild": true}],
+    "testing-library/no-unnecessary-act": ["error", {"isStrict": true}],
+    "testing-library/no-render-in-setup": ["error", {"allowTestingFrameworkSetupHook": "beforeAll"}],
+    "testing-library/no-await-sync-events": [
+      "error",
+      {
+        "eventModules": ["fire-event", "user-event"]
+      }
+    ]
   },
   "settings": {
     "react": {
